--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "shoptrack",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "electron": "^39.2.1",
-    "standard": "^17.1.2"
-  },
-  "eslintConfig": {
-    "extends": "standard"
-  }
+	"name": "shoptrack",
+	"version": "1.0.0",
+	"description": "",
+	"main": "main.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "electron ."
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"electron": "^39.2.1",
+		"standard": "^17.1.2"
+	},
+	"eslintConfig": {
+		"extends": "standard"
+	}
 }
