--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
 	"main": "main.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "electron ."
+		"start": "electron .",
+		"build:css": "npx @tailwindcss/cli -i ./assets/css/styles.css -o ./dist/output.css",
+		"watch:css": "npx @tailwindcss/cli -i ./assets/css/styles.css -o ./dist/output.css --watch",
+		"dev": "npm run watch:css"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@tailwindcss/cli": "^4.1.17",
 		"electron": "^39.2.1",
-		"standard": "^17.1.2"
+		"standard": "^17.1.2",
+		"tailwindcss": "^4.1.17"
 	},
 	"eslintConfig": {
 		"extends": "standard"
