--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@fortawesome/fontawesome-free": "^7.1.0",
 		"echarts": "^6.0.0",
 		"pdfkit": "^0.17.2",
+		"pdfkit-table": "^0.1.99",
 		"sqlite3": "^5.1.7"
 	}
 }
