factuara lan modified

--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,6 @@
 {
   "idioma": "en",
-  "idiomaFactura": "es",
+  "idiomaFactura": "en",
   "moneda": "USD",
   "zonaHoraria": "America/Mexico_City",
   "formatoFecha": "DD/MM/YYYY",
