--- a/data/config.json
+++ b/data/config.json
@@ -1,12 +1,12 @@
 {
-  "idioma": "en",
+  "idioma": "es",
   "idiomaFactura": "en",
   "moneda": "USD",
   "zonaHoraria": "America/Mexico_City",
   "formatoFecha": "DD/MM/YYYY",
-  "prefijoFactura": "FAC",
+  "prefijoFactura": "INV",
   "numeroInicial": 1000,
-  "ivaPredeterminado": 0.08,
+  "ivaPredeterminado": 0.21,
   "incluirLogo": true,
   "nombre": "Core transport lLC",
   "rfc": "",
