invoice logo void

--- a/data/config.json
+++ b/data/config.json
@@ -1,16 +1,16 @@
 {
-  "idioma": "es",
-  "idiomaFactura": "en",
-  "moneda": "USD",
-  "zonaHoraria": "America/Mexico_City",
-  "formatoFecha": "DD/MM/YYYY",
-  "prefijoFactura": "INV",
-  "numeroInicial": 1000,
-  "ivaPredeterminado": 0.0825,
-  "incluirLogo": true,
-  "nombre": "Core transport lLC",
-  "rfc": "",
-  "telefono": "",
-  "email": "",
-  "direccion": ""
+	"idioma": "es",
+	"idiomaFactura": "en",
+	"moneda": "USD",
+	"zonaHoraria": "America/Mexico_City",
+	"formatoFecha": "DD/MM/YYYY",
+	"prefijoFactura": "INV",
+	"numeroInicial": 1000,
+	"ivaPredeterminado": 0.0825,
+	"incluirLogo": false,
+	"nombre": "Core transport lLC",
+	"rfc": "",
+	"telefono": "",
+	"email": "",
+	"direccion": ""
 }
