email and direction added

--- a/data/config.json
+++ b/data/config.json
@@ -11,6 +11,6 @@
 	"nombre": "Core transport lLC",
 	"rfc": "",
 	"telefono": "",
-	"email": "",
-	"direccion": ""
+	"email": "coretransportllc@aol.com",
+	"direccion": "16151 w 33 st Odessa TX 79764"
 }
