--- a/package.json
+++ b/package.json
@@ -25,8 +25,19 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^7.1.0",
 		"echarts": "^6.0.0",
+		"electron-log": "^5.4.3",
+		"electron-updater": "^6.7.3",
 		"pdfkit": "^0.17.2",
 		"pdfkit-table": "^0.1.99",
 		"sqlite3": "^5.1.7"
+	},
+	"build": {
+		"publish": [
+			{
+				"provider": "github",
+				"owner": "Chris_0171",
+				"repo": "ShopTrack"
+			}
+		]
 	}
 }
